fix wrap problem in scrolling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -881,6 +881,7 @@ table tfoot td {
 
 .post, .article-page {
   background-color: #fff;
+  width: 100%;
 }
 
 ::-moz-selection {
